Can successfully retrieve work items from Azure DevOps Server and send the response back to the request.

--- a/src/TimeSheet.Api/appsettings.json
+++ b/src/TimeSheet.Api/appsettings.json
@@ -5,5 +5,14 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "CosmosDb": {
+    "account": "",
+    "key": ""
+  },
+  "DevOps": {
+    "defaultUri": "https://dev.azure.com/",
+    "organization": "",
+    "personalAccessToken": ""
+  }
 }
